--- a/infrastructure/initial/02-admin-service-catalog-setup.yaml
+++ b/infrastructure/initial/02-admin-service-catalog-setup.yaml
@@ -4,7 +4,7 @@ Description: 'Application Manager and Service Catalog Configuration for Developm
 Parameters:
   ProjectTag:
     Type: String
-    Default: DevelopmentEnv
+    Default: AgentDevEnv
     Description: Project tag value for all resources
   
   ManagedByTag:
@@ -29,27 +29,26 @@ Parameters:
     
   ArtifactBucketName:
     Type: String
-    Default: dev-environment-artifacts
-    Description: Name of the S3 bucket for storing artifacts
+    Description: Name of the S3 bucket for storing artifacts (including account ID suffix)
 
 Resources:
   # Application Manager Configuration
-  DevEnvironmentApplication:
+  AgentDevEnvApplication:
     Type: AWS::ServiceCatalogAppRegistry::Application
     Properties:
-      Name: DevEnvironment
-      Description: Development Environment for Team
+      Name: AgentDevEnvApplication
+      Description: Development Environment for Agents
       Tags:
         Environment: Development
         Project: !Ref ProjectTag
         ManagedBy: !Ref ManagedByTag
 
   # Create a resource group for the application
-  DevEnvironmentResourceGroup:
+  AgentDevEnvResourceGroup:
     Type: AWS::ResourceGroups::Group
     Properties:
-      Name: DevEnvironmentResourceGroup
-      Description: Resource group for Development Environment
+      Name: AgentDevEnvResourceGroup
+      Description: Resource group for Agent Development Environment
       ResourceQuery:
         Type: TAG_FILTERS_1_0
         Query: 
@@ -63,29 +62,12 @@ Resources:
               Values:
                 - !Ref ManagedByTag
       Tags:
-        Project: !Ref ProjectTag
-        ManagedBy: !Ref ManagedByTag
-        
-  # S3 Bucket for storing artifacts (templates, etc.)
-  ArtifactBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: !Sub '${ArtifactBucketName}-${AWS::AccountId}'
-      VersioningConfiguration:
-        Status: Enabled
-      # Server-side encryption for internal bucket security
-      BucketEncryption:
-        ServerSideEncryptionConfiguration:
-          - ServerSideEncryptionByDefault:
-              SSEAlgorithm: AES256
-      Tags:
         - Key: Project
           Value: !Ref ProjectTag
         - Key: ManagedBy
           Value: !Ref ManagedByTag
           
-  # Service Catalog Portfolio
-  DevEnvironmentPortfolio:
+  ServiceCatalogPortfolio:
     Type: AWS::ServiceCatalog::Portfolio
     Properties:
       DisplayName: !Ref PortfolioName
@@ -97,55 +79,27 @@ Resources:
         - Key: ManagedBy
           Value: !Ref ManagedByTag
 
-  # Minimal Launch Role for Service Catalog Products
-  ServiceCatalogLaunchRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: servicecatalog.amazonaws.com
-            Action: sts:AssumeRole
-      # Minimal permissions needed for launching EC2 instances
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
-        - arn:aws:iam::aws:policy/PowerUserAccess
-      Path: /
-      Tags:
-        - Key: Project
-          Value: !Ref ProjectTag
-        - Key: ManagedBy
-          Value: !Ref ManagedByTag
-
 Outputs:
   ApplicationId:
-    Description: Application ID for DevEnvironment
-    Value: !GetAtt DevEnvironmentApplication.Id
+    Description: Application ID for AgentDevEnv
+    Value: !GetAtt AgentDevEnvApplication.Id
     Export:
-      Name: DevEnvironment-ApplicationId
+      Name: AgentDevEnv-ApplicationId
       
   PortfolioId:
     Description: ID of the Service Catalog Portfolio
-    Value: !Ref DevEnvironmentPortfolio
+    Value: !Ref ServiceCatalogPortfolio
     Export:
-      Name: DevEnvironment-PortfolioId
+      Name: AgentDevEnv-PortfolioId
       
   PortfolioOwner:
     Description: Owner of the Service Catalog Portfolio
     Value: !Ref PortfolioOwner
     Export:
-      Name: DevEnvironment-PortfolioOwner
-      
-  ServiceCatalogLaunchRoleArn:
-    Description: ARN of the Service Catalog Launch Role
-    Value: !GetAtt ServiceCatalogLaunchRole.Arn
-    Export:
-      Name: DevEnvironment-ServiceCatalogLaunchRoleArn
+      Name: AgentDevEnv-PortfolioOwner
       
   ArtifactBucketName:
     Description: Name of the S3 bucket for storing artifacts
-    Value: !Ref ArtifactBucket
+    Value: !Ref ArtifactBucketName
     Export:
-      Name: DevEnvironment-ArtifactBucketName
+      Name: AgentDevEnv-ArtifactBucketName
