--- a/infrastructure/initial/01-admin-network-infrastructure.yaml
+++ b/infrastructure/initial/01-admin-network-infrastructure.yaml
@@ -27,104 +27,90 @@ Resources:
         - Key: ManagedBy
           Value: !Ref ManagedByTag
   
-  PrivateSubnet1:
+  # Create an Internet Gateway for internet access
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: AgentDevEnv-IGW
+        - Key: Project
+          Value: !Ref ProjectTag
+        - Key: ManagedBy
+          Value: !Ref ManagedByTag
+  
+  # Attach the Internet Gateway to the VPC
+  AttachGateway:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref DevVPC
+      InternetGatewayId: !Ref InternetGateway
+  
+  # Create a public route table
+  PublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref DevVPC
+      Tags:
+        - Key: Name
+          Value: AgentDevEnv-PublicRT
+        - Key: Project
+          Value: !Ref ProjectTag
+        - Key: ManagedBy
+          Value: !Ref ManagedByTag
+  
+  # Create a route to the internet
+  PublicRoute:
+    Type: AWS::EC2::Route
+    DependsOn: AttachGateway
+    Properties:
+      RouteTableId: !Ref PublicRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
+  
+  # Create public subnets
+  PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref DevVPC
       CidrBlock: 10.0.1.0/24
       AvailabilityZone: !Select [0, !GetAZs '']
+      MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: AgentDevEnv-PrivateSubnet1
+          Value: AgentDevEnv-PublicSubnet1
         - Key: Project
           Value: !Ref ProjectTag
         - Key: ManagedBy
           Value: !Ref ManagedByTag
   
-  PrivateSubnet2:
+  PublicSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref DevVPC
       CidrBlock: 10.0.2.0/24
       AvailabilityZone: !Select [1, !GetAZs '']
+      MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: AgentDevEnv-PrivateSubnet2
+          Value: AgentDevEnv-PublicSubnet2
         - Key: Project
           Value: !Ref ProjectTag
         - Key: ManagedBy
           Value: !Ref ManagedByTag
   
-  # SSM VPC Endpoints
-  SSMEndpoint:
-    Type: AWS::EC2::VPCEndpoint
+  # Associate the public route table with the public subnets
+  PublicSubnet1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssm
-      VpcId: !Ref DevVPC
-      VpcEndpointType: Interface
-      SubnetIds:
-        - !Ref PrivateSubnet1
-        - !Ref PrivateSubnet2
-      PrivateDnsEnabled: true
-      SecurityGroupIds:
-        - !Ref EndpointSecurityGroup
-      Tags:
-        - Key: Project
-          Value: !Ref ProjectTag
-        - Key: ManagedBy
-          Value: !Ref ManagedByTag
+      SubnetId: !Ref PublicSubnet1
+      RouteTableId: !Ref PublicRouteTable
   
-  SSMMessagesEndpoint:
-    Type: AWS::EC2::VPCEndpoint
+  PublicSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssmmessages
-      VpcId: !Ref DevVPC
-      VpcEndpointType: Interface
-      SubnetIds:
-        - !Ref PrivateSubnet1
-        - !Ref PrivateSubnet2
-      PrivateDnsEnabled: true
-      SecurityGroupIds:
-        - !Ref EndpointSecurityGroup
-      Tags:
-        - Key: Project
-          Value: !Ref ProjectTag
-        - Key: ManagedBy
-          Value: !Ref ManagedByTag
-  
-  EC2MessagesEndpoint:
-    Type: AWS::EC2::VPCEndpoint
-    Properties:
-      ServiceName: !Sub com.amazonaws.${AWS::Region}.ec2messages
-      VpcId: !Ref DevVPC
-      VpcEndpointType: Interface
-      SubnetIds:
-        - !Ref PrivateSubnet1
-        - !Ref PrivateSubnet2
-      PrivateDnsEnabled: true
-      SecurityGroupIds:
-        - !Ref EndpointSecurityGroup
-      Tags:
-        - Key: Project
-          Value: !Ref ProjectTag
-        - Key: ManagedBy
-          Value: !Ref ManagedByTag
-  
-  EndpointSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for VPC endpoints
-      VpcId: !Ref DevVPC
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-          CidrIp: 10.0.0.0/16
-      Tags:
-        - Key: Project
-          Value: !Ref ProjectTag
-        - Key: ManagedBy
-          Value: !Ref ManagedByTag
+      SubnetId: !Ref PublicSubnet2
+      RouteTableId: !Ref PublicRouteTable
 
 Outputs:
   VpcId:
@@ -133,14 +119,14 @@ Outputs:
     Export:
       Name: AgentDevEnv-VpcId
   
-  PrivateSubnet1Id:
-    Description: Private Subnet 1 ID
-    Value: !Ref PrivateSubnet1
+  PublicSubnet1Id:
+    Description: Public Subnet 1 ID
+    Value: !Ref PublicSubnet1
     Export:
       Name: AgentDevEnv-PrivateSubnet1Id
   
-  PrivateSubnet2Id:
-    Description: Private Subnet 2 ID
-    Value: !Ref PrivateSubnet2
+  PublicSubnet2Id:
+    Description: Public Subnet 2 ID
+    Value: !Ref PublicSubnet2
     Export:
       Name: AgentDevEnv-PrivateSubnet2Id
