--- a/infrastructure/02-template/ubuntu-template.yaml
+++ b/infrastructure/02-template/ubuntu-template.yaml
@@ -26,6 +26,8 @@ Resources:
             Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
+        - arn:aws:iam::aws:policy/AmazonBedrockFullAccess
+        - arn:aws:iam::aws:policy/AmazonQDeveloperAccess
       Path: /
       Tags:
         - Key: Project
